Update - form handler

--- a/app/CreditFeatureModule/templates/CreditFeature.html
+++ b/app/CreditFeatureModule/templates/CreditFeature.html
@@ -42,7 +42,7 @@
          <div class="modal-body">
               <div class="form-group">
                   <label for="creditName">Data selector</label>
-                  <select id="selectRemoveCreditProfile"  ng-model="creditRemove" value="{{creditRemove}}"  placeholder="Search" class="form-control"></select>
+                  <select id="selectRemoveCreditProfile" required="true"  ng-model="creditRemove" value="{{creditRemove}}"  placeholder="Search" class="form-control"></select>
               </div>
          </div>
 
